# qa_guru_diploma

./: .env.public  .gitignore  README.md  pyproject.toml
helper/api/: api_requests.py  custom_session.py  data_generation.py  env_path.py
schemas/: account_base_schema.json  block_list_schema.json  create_comment_schema.json  delete_comment_schema.json  unfollow_tag_schema.json
tests/api/: test_block_and_unblock_user.py  test_create_and_delete_comment.py  test_follow_and_unfollow_tag.py  test_get_account_base_info.py
utils/: attach.py
